# hydropNFT

./: .gitignore  AUDIT_REPORT.md  CMakeLists.txt  LOG_MQTT_SETUP.md  README.md  ota_server.py  partitions.csv
components/ads1115/: CMakeLists.txt  ads1115.c
components/ads1115/include/: ads1115.h
components/device_control/: CMakeLists.txt  device_control.c
components/device_control/include/: device_control.h
components/espnow_receiver/: CMakeLists.txt  Kconfig.projbuild  espnow_receiver.c
components/espnow_receiver/include/: espnow_receiver.h
components/log_forwarder/: CMakeLists.txt  log_forwarder.c
components/log_forwarder/include/: log_forwarder.h
components/mqtt_client/: CMakeLists.txt  Kconfig.projbuild  custom_outbox.cpp  idf_component.yml  mqtt_client.c
components/mqtt_client/include/: hydro_mqtt_client.h
components/ota_client/: CMakeLists.txt  Kconfig.projbuild  ota_client.c
components/ota_client/include/: ota_client.h
components/settings/: CMakeLists.txt  settings.c
components/settings/include/: settings.h
components/sntp_client/: CMakeLists.txt  Kconfig.projbuild  sntp_client.c
components/sntp_client/include/: sntp_client.h
components/water_level_capacitance/include/: water_level_capacitance.h
components/web_server/: CMakeLists.txt  Kconfig.projbuild  web_server.c
components/web_server/include/: web_server.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  main.h
my_example/: example_single_channel.c  water_level.c
my_example/main/: CMakeLists.txt  native_ota_example.c
my_exmple/water_level_capacitance/: CMakeLists.txt  water_level_capacitance.c
server_certs/: ca_cert.pem  ca_key.pem
